<resources>
    <string name="app_name">DermAI</string>
    <string name="error_dialog">An Error Occured</string>
    <string name="details">Details</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="makeup">Make Up</string>
    <string name="item_count">0 Items</string>
    <string name="skincare">Skin Care</string>
    <string name="item_name">Item Name</string>
    <string name="item_rating">1.0</string>
    <string name="item_price">000000</string>
    <string name="item_favorite">Favorite</string>
    <string name="item_link">Link</string>
    <string name="item_tags">tags</string>
    <string name="skin_type">Skin Type</string>
    <string name="skin_type_combination_description">The most common skin type. Combination skin has areas that are oily (usually the T-zone: forehead, nose, and chin) and areas that are normal or dry (usually the cheeks).</string>
    <string name="skin_type_combination_description_short">The most common skin type. Has areas that are oily and areas that are normal or dry.</string>
    <string name="skin_type_combination">Combination</string>
    <string name="skin_type_oily">Oily</string>
    <string name="skin_type_oily_description">Oily skin produces excess sebum (oil), making it shiny and prone to breakouts. You might experience larger pores and a greasy feeling throughout the day.</string>
    <string name="skin_type_oily_description_short">Excess oil leads to shine, breakouts, and larger pores, leaving your face feeling greasy.</string>
    <string name="skin_type_dry">Dry</string>
    <string name="skin_type_dry_description">Dry skin lacks moisture, making it feel tight, flaky, and itchy. It might also appear rough and have visible fine lines.</string>
    <string name="skin_type_dry_description_short">Lacks moisture, feels tight, flaky, and itchy, with visible fine lines.</string>
    <string name="acne_level">Acne Level</string>
    <string name="acne_level_low">Low</string>
    <string name="acne_level_low_description">Characterized by a few pimples or blemishes, often called \"mild acne.\" It includes some blackheads, whiteheads, or minor pimples. The skin appears mostly clear, with occasional manageable breakouts.</string>
    <string name="acne_level_low_description_short">Few pimples, mostly whiteheads or blackheads. Skin mostly clear with occasional breakouts.</string>
    <string name="acne_level_moderate">Moderate</string>
    <string name="acne_level_moderate_description">Moderate acne level involves more pimples and blemishes, both inflamed and non-inflamed. It affects larger areas, including the face, back, and chest, with noticeable redness and inflammation.</string>
    <string name="acne_level_moderate_description_short">More pimples, inflamed and non-inflamed, with redness and inflammation.</string>
    <string name="acne_level_severe">Severe</string>
    <string name="acne_level_severe_description">Severe acne level involves numerous, often painful blemishes, including deep cysts and nodules, also known as \"cystic acne.\" It can cause significant scarring and affects large, inflamed areas, leading to discomfort and potential psychological impacts.</string>
    <string name="acne_level_severe_description_short">Numerous, painful blemishes, including deep cysts and nodules. Can cause scarring and significant discomfort.</string>
    <string name="skin_tone">Skin Tone</string>
    <string name="skin_tone_fairtolight">Fair To Light</string>
    <string name="skin_tone_fairtolight_description">Fair to light skin tones typically have a pale or ivory complexion. They may burn easily in the sun and often have freckles or a slight pink undertone.</string>
    <string name="skin_tone_fairtolight_description_short">Pale or ivory complexion, burns easily in the sun, with freckles or a slight pink undertone.</string>
    <string name="skin_tone_lighttomedium">Light To Medium</string>
    <string name="skin_tone_lighttomedium_description">Light to medium skin tones range from beige to olive. They have more melanin than fair skin, offering some protection against UV damage, but may still experience sunburn.</string>
    <string name="skin_tone_lighttomedium_description_short">Beige to olive complexion, more melanin than fair skin, with some protection against UV damage.</string>
    <string name="skin_tone_mediumtodark">Medium To Dark</string>
    <string name="skin_tone_mediumtodark_description">Medium to dark skin tones encompass a wide range of shades, from tan to deep brown. They contain higher levels of melanin, providing natural sun protection and reduced susceptibility to sunburn.</string>
    <string name="skin_tone_mediumtodark_description_short">Tan to deep brown complexion, higher melanin levels, with natural sun protection and reduced sunburn susceptibility.</string>
    <string name="skin_result">Skin Result</string>
    <string name="skin_profile">Your Skin Profile</string>
    <string name="Recommended">Recommended For You</string>
    <string name="wishlisted">Wishlisted</string>
    <string name="analysis_result">Analysis Result</string>
    <string name="dermai">DermAI</string>
    <string name="unlock_your_skin_s_secrets_with_a_selfie">Unlock Your Skin\'s Secrets with a Selfie!</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="wishlist">Wishlist</string>
    <string name="check_your_skin_result_take_a_new_picture">Check Your Skin Result / Take a New Picture</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="validation_email">Wrong email format!</string>
    <string name="validation_password">8 characters minimum</string>
    <string name="concern">Concerns: </string>
    <string name="face_moisturizer">Face Moisturizers</string>
    <string name="cleanser">Cleansers</string>
    <string name="mask">Mask and Peel</string>
    <string name="eyecream">Eye Cream</string>
</resources>